# panda-touch-oss

./: CMakeLists.txt  DOCUMENTATIE.md  LICENSE  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
main/app/: bambu_client.cpp  bambu_client.hpp  battery_monitor.cpp  battery_monitor.hpp  clock_manager.cpp  clock_manager.hpp  config_manager.cpp  config_manager.hpp  ota_manager.cpp  ota_manager.hpp  printer_state.hpp  sleep_manager.cpp  sleep_manager.hpp  thumbnail_fetcher.cpp  thumbnail_fetcher.hpp  version.hpp  wifi_manager.cpp  wifi_manager.hpp
main/ui/: screen_ams.cpp  screen_ams.hpp  screen_home.cpp  screen_home.hpp  screen_ota.cpp  screen_ota.hpp  screen_printer.cpp  screen_printer.hpp  screen_screensaver.cpp  screen_screensaver.hpp  screen_settings.cpp  screen_settings.hpp  screen_wifi.cpp  screen_wifi.hpp  ui_manager.cpp  ui_manager.hpp
