idf_component_register(
    SRCS
        "main.cpp"
        "app/config_manager.cpp"
        "app/wifi_manager.cpp"
        "app/bambu_client.cpp"
        "app/battery_monitor.cpp"
        "app/sleep_manager.cpp"
        "app/clock_manager.cpp"
        "app/thumbnail_fetcher.cpp"
        "ui/ui_manager.cpp"
        "ui/screen_wifi.cpp"
        "ui/screen_home.cpp"
        "ui/screen_printer.cpp"
        "ui/screen_ams.cpp"
        "ui/screen_settings.cpp"
        "ui/screen_screensaver.cpp"
    INCLUDE_DIRS
        "."
        "app"
        "ui"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        mqtt
        esp_tls
        esp_lcd
        esp_lcd_touch_gt911
        driver
        esp_adc
        spiffs
        json
        lvgl
        esp_http_client
        esp_sntp
)
